[tool.poetry]
name = "iris"
version = "0.1.0"
description = ""
authors = ["LavenderPixl <annajacobsen1999@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
